# midori-web-

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DRM.md  Dockerfile  LICENSE  README.md  chunks-entries-map.json  cla.md  config.h.cmake  dev-app-update.yml  electron-builder.json  package-lock.json  package.json  webpack.config.base.js  webpack.config.renderer.js  windows-build.ps1
autotests/: CMakeLists.txt  autotests.h  cookiestest.cpp  locationbartest.cpp  passwordbackendtest.cpp  qztoolstest.cpp  tabmodeltest.cpp  webtabtest.cpp  webviewtest.cpp
autotests/qml/: qmlbookmarksapitest.cpp  qmlclipboardapitest.cpp  qmlcookiesapitest.cpp  qmlhistoryapitest.cpp  qmltabsapitest.cpp  qmltesthelper.cpp  qmltopsitesapitest.cpp  qmluserscriptapitest.cpp  qmlwindowsapitest.cpp
src/lib/: CMakeLists.txt
src/lib/adblock/: adblockaddsubscriptiondialog.cpp  adblockaddsubscriptiondialog.h  adblockaddsubscriptiondialog.ui  adblockdialog.cpp  adblockdialog.h  adblockdialog.ui  adblockicon.cpp  adblockicon.h  adblockmanager.cpp  adblockmanager.h  adblockmatcher.cpp  adblockmatcher.h  adblockplugin.cpp  adblockplugin.h  adblockrule.cpp  adblockrule.h  adblocksearchtree.h  adblocksubscription.cpp  adblocksubscription.h  adblocktreewidget.h  adblockurlinterceptor.cpp  adblockurlinterceptor.h  metadata.desktop
src/lib/app/: autosaver.h  browserwindow.cpp  browserwindow.h  commandlineoptions.cpp  commandlineoptions.h  datapaths.cpp  datapaths.h  mainapplication.cpp  mainapplication.h  mainmenu.cpp  mainmenu.h  profilemanager.cpp  proxystyle.h  qzcommon.cpp  qzcommon.h  settings.cpp  settings.h
src/lib/autofill/: autofill.cpp  autofill.h  autofillicon.cpp  autofillicon.h  autofillnotification.cpp  autofillnotification.h  autofillnotification.ui  autofillwidget.cpp  autofillwidget.h  passwordmanager.cpp  passwordmanager.h
src/lib/bookmarks/: bookmarkitem.cpp  bookmarkitem.h  bookmarks.cpp  bookmarks.h  bookmarksicon.h  bookmarksitemdelegate.h  bookmarksmanager.cpp  bookmarksmanager.h  bookmarksmanager.ui  bookmarksmenu.cpp  bookmarksmenu.h  bookmarksmodel.cpp  bookmarksmodel.h  bookmarkstoolbar.cpp  bookmarkstoolbar.h  bookmarkstoolbarbutton.cpp  bookmarkstoolbarbutton.h  bookmarkstools.cpp  bookmarkstools.h  bookmarkstreeview.cpp  bookmarkstreeview.h  bookmarkswidget.cpp  bookmarkswidget.h  bookmarkswidget.ui
src/lib/cookies/: cookiejar.cpp  cookiejar.h  cookiemanager.cpp  cookiemanager.h  cookiemanager.ui
src/lib/data/: html.qrc  icons.qrc
src/lib/downloads/: downloaditem.cpp  downloaditem.h  downloaditem.ui  downloadmanager.cpp  downloadmanager.h  downloadmanager.ui  downloadoptionsdialog.cpp  downloadoptionsdialog.h  downloadoptionsdialog.ui  downloadsbutton.cpp
src/lib/history/: history.cpp  history.h  historyitem.h  historymanager.cpp  historymanager.h  historymanager.ui  historymenu.cpp  historymenu.h  historymodel.cpp  historymodel.h  historytreeview.cpp
src/lib/navigation/: downicon.cpp  downicon.h  goicon.h  locationbar.cpp  locationbar.h  locationbarpopup.h  navigationbar.cpp  navigationbar.h  navigationbarconfigdialog.cpp  navigationbarconfigdialog.h  navigationbarconfigdialog.ui  navigationbartoolbutton.cpp  navigationbartoolbutton.h  navigationcontainer.h  reloadstopbutton.cpp  reloadstopbutton.h  siteicon.cpp  siteicon.h  websearchbar.cpp  websearchbar.h
src/lib/network/: networkmanager.cpp  networkmanager.h  networkurlinterceptor.cpp  networkurlinterceptor.h  sslerrordialog.h  sslerrordialog.ui
src/lib/notifications/: desktopnotification.h  desktopnotificationsfactory.cpp  desktopnotificationsfactory.h
src/lib/opensearch/: editsearchengine.cpp  editsearchengine.h  editsearchengine.ui  opensearchengine.cpp  opensearchengine.h  opensearchreader.h  searchenginesdialog.cpp  searchenginesdialog.h  searchenginesdialog.ui  searchenginesmanager.cpp  searchenginesmanager.h
src/lib/other/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  browsinglibrary.cpp  browsinglibrary.h  browsinglibrary.ui  checkboxdialog.h  clearprivatedata.cpp  clearprivatedata.h  clearprivatedata.ui  iconchooser.cpp  iconchooser.h  iconchooser.ui  licenseviewer.h  lum_sdk.h  protocolhandlerdialog.cpp  protocolhandlerdialog.ui  protocolhandlermanager.cpp  protocolhandlermanager.h  qzsettings.cpp  qzsettings.h  registerqappassociation.cpp  registerqappassociation.h  siteinfo.cpp  siteinfo.h  siteinfo.ui  siteinfowidget.cpp  siteinfowidget.h  siteinfowidget.ui  statusbar.cpp  statusbar.h  updater.cpp  updater.h  useragentmanager.cpp  useragentmanager.h
src/lib/plugins/: ocssupport.cpp  plugininterface.h  pluginproxy.h  plugins.cpp  plugins.h  speeddial.cpp  speeddial.h
src/lib/popupwindow/: popuplocationbar.cpp  popuplocationbar.h  popupstatusbarmessage.h  popupwebview.cpp  popupwebview.h  popupwindow.cpp  popupwindow.h
src/lib/preferences/: acceptlanguage.h  acceptlanguage.ui  addacceptlanguage.ui  autofillmanager.h  autofillmanager.ui  jsoptions.cpp  jsoptions.h  jsoptions.ui  pluginlistdelegate.cpp  pluginlistdelegate.h  pluginslist.ui  pluginsmanager.cpp  pluginsmanager.h  preferences.cpp  preferences.h  preferences.ui  thememanager.cpp  thememanager.h  thememanager.ui  useragentdialog.cpp  useragentdialog.h  useragentdialog.ui
src/lib/session/: recoveryjsobject.cpp  restoremanager.h  sessionmanager.cpp  sessionmanager.h  sessionmanagerdialog.cpp  sessionmanagerdialog.ui
src/lib/sidebar/: bookmarkssidebar.cpp  bookmarkssidebar.h  bookmarkssidebar.ui  historysidebar.cpp  historysidebar.h  historysidebar.ui  sidebar.cpp  sidebar.h  sidebarinterface.h
src/lib/tabwidget/: combotabbar.cpp  combotabbar.h  tabbar.cpp  tabbar.h  tabcontextmenu.cpp  tabcontextmenu.h  tabicon.cpp  tabicon.h  tabmodel.cpp  tabmodel.h  tabmrumodel.h  tabstackedwidget.h  tabtreemodel.cpp  tabtreemodel.h  tabwidget.cpp  tabwidget.h
src/lib/tools/: abstractbuttoninterface.h  aesinterface.cpp  aesinterface.h  animatedwidget.h  menubar.h  (+28 more)
src/main/: CMakeLists.txt  Info.plist  bhawkversion.h.cmake  index.ts  main.cpp  midoriversion.h.cmake  sessions-manager.ts  version.rc  view.ts
tests/benchmarks/: CMakeLists.txt
(+366 files in other folders)
